adds a dummy logo icon

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
             <div class="header-div-1">
               <div class="phone-header">
                 <i class="fa-solid fa-phone"></i>
-                <p>+91 98948 92010</p>
+                <p> 12345 67890 </p>
               </div>
               <div class="social-links-header">
                 <div class="mail-link-header">
                   <i class="fa-regular fa-envelope"></i>
-                  <p>support@dsolve.co.in</p>
+                  <p>support@mail.in</p>
                 </div>
                 <div class="social-links">
                   <div class="icon-div">
@@ -50,7 +50,7 @@
             <div class="header-div-2">
               <div class="header-div-subdiv" >
               <div class="logo-div">
-                <img src="./Assests/logo.png" alt="logo" />
+                <img src="./Assests/logoipsum-332.svg" alt="logo" />
               </div>
               <div class="nav-links">
                 <a>Home</a>
@@ -1374,6 +1374,7 @@
 
         <div id="space-logo-banner">
           <img src="./Assests/freepik-landing-page-template-universe-min.png" alt="logo" />
+
         </div>
 
         <div id="pricing-section">
@@ -1591,9 +1592,9 @@
             
             <div class="footer-grid-1">
               <div class="logo-div-footer">
-                <img src="./Assests/logo.png" alt="logo" />
+                <img src="./Assests/logoipsum-332.svg" alt="logo" />
               </div>
-              <p>Improve efficiency, provide a better Customer experience with modern Technolo services available.</p>
+              <p>Improve efficiency, provide a better Customer experience with modern Technology services available.</p>
               <div class="social-links-footer">
                 <div class="icon-div-footer">
                   <i class="fa-brands fa-facebook"></i>
@@ -1638,15 +1639,15 @@
               <div class="quicklinks-lists">
                 <div class="contact-links-row">
                   <i class="fa-solid fa-location-dot"></i>
-                  <a href="#" >Madurai</a>
+                  <a href="#" > City </a>
                 </div>
                 <div class="contact-links-row">
                   <i class="fa-regular fa-envelope"></i>
-                  <a href="#" >support@dsolve.co.in</a>
+                  <a href="#" >support@mail.in</a>
                 </div>
                 <div class="contact-links-row">
                   <i class="fa-solid fa-phone"></i>
-                  <a href="#" >+91 98948 92010</a>
+                  <a href="#" >12345 67890</a>
                 </div>
                </div>
             </div>
