adds headline text

--- a/index.html
+++ b/index.html
@@ -1376,7 +1376,10 @@
           <img src="./Assests/freepik-landing-page-template-universe-min.png" alt="logo" />
 
         </div>
-
+        <div id="get-a-quote-container">
+          <h1>Drive More Visitors to Your Website!</h1>
+          <p>Stand out online and grow your business today!</p>
+        </div>
         <div id="pricing-section">
           <div class="sub-title-bg">
             <span>pricing plans</span>
