added 'get a quote' button

--- a/index.html
+++ b/index.html
@@ -1379,6 +1379,7 @@
         <div id="get-a-quote-container">
           <h1>Drive More Visitors to Your Website!</h1>
           <p>Stand out online and grow your business today!</p>
+          <button>Get a Quote</button>
         </div>
         <div id="pricing-section">
           <div class="sub-title-bg">
